# previous-team-code

UET_ModelX/: CMakeLists.txt  package.xml
UET_ModelX/OpenNI-Linux-Arm64-2.3.0.55/Tools/: NiViewer
UET_ModelX/include/: car_control.h  detecttrafficsign.h  lane_detect.h  ros_handle.h
UET_ModelX/src/: car_control.cpp  detecttrafficsign.cpp  lane_detect.cpp  main.cpp  ros_handle.cpp
backup/: CMakeLists.txt  package.xml
backup/include/: car_control.h  ros_handle.h
backup/src/: car_control.cpp  detecttrafficsign.cpp  lane_detect.cpp  main.cpp  ros_handle.cpp
detect_traffic_sign/: CMakeLists.txt
detect_traffic_sign/include/: detecttrafficsign.h  ros_handle.h
detect_traffic_sign/src/: detecttrafficsign.cpp  ros_handle.cpp
localize/: CMakeLists.txt  package.xml
localize/include/: ros_handle.h
localize/src/: main.cpp  ros_handle.cpp
mpu_9250/config/: RTIMULib.ini
mpu_9250/src/: mpu_9250.cpp
